services.yaml
apiVersion: v1
kind: Service
metadata: 
  name: doggy-webapp
spec: 
  selector: 
    app: webapp
  ports: 
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata: 
  name: registry-service
spec: 
  selector: 
    microsvc: registry
  ports: 
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - name: http # needs to have a name to work
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https # needs to have a name to work
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
