ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doggy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # This rewrites paths correctly
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(.*) # Matches /api/*
        pathType: Prefix
        backend:
          service:
            name: registry-service
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: doggy-webapp
            port:
              number: 3000
